--- a/app/views/bootstrap/component/button.scala.html
+++ b/app/views/bootstrap/component/button.scala.html
@@ -68,7 +68,7 @@
 					<div class="mb-3">
 						@components.button(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-check-circle", "text"->"Button", "badge"->"New", "iconType"->"success"))
 						@components.button(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-info-circle", "text"->"Button", "badge"->"1", "iconType"->"info"))
-						@components.button(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-exclamation-circle", "text"->"Button", "badge"->"2", "iconType"->"warning"))
+						@components.button(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-exclamation-triangle", "text"->"Button", "badge"->"2", "iconType"->"warning"))
 						@components.button(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-ban", "text"->"Button", "badge"->"3", "iconType"->"danger"))
 					</div>
 					<div class="mb-3">
