--- a/app/views/framework/welcome/index.scala.html
+++ b/app/views/framework/welcome/index.scala.html
@@ -29,7 +29,7 @@
 
 			<h4 class="headline">Official page.</h4>
 
-			@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-exclamation-circle text-info", "text"->"This <strong>template</strong> is unofficial.")){
+			@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-info-circle  text-info", "text"->"This <strong>template</strong> is unofficial.")){
 
 				@components.linkbutton(Map("id"->"", "type"->"success", "outline"->"true", "link"->"https://www.playframework.com", "text"->"Play Framework", "icon"->"ii ii-play", "target"->"_blank"))<br>
 			}
