--- a/app/views/setting/system/font.scala.html
+++ b/app/views/setting/system/font.scala.html
@@ -53,7 +53,7 @@
 				</div>
 				<div class="col-2 col-sm-1 fontEqual">=</div>
 				<div class="col-10 col-sm-5">
-					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-exclamation-circle text-info", "text"->"If already installed will be displayed as well.")){
+					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-info-circle  text-info", "text"->"If already installed will be displayed as well.")){
 						<div class="font-family_HiraginoSans-W3 fontPreview">
 							The quick brown fox jumps over the lazy dog.
 						</div>
@@ -84,7 +84,7 @@
 				</div>
 				<div class="col-2 col-sm-1 fontEqual">=</div>
 				<div class="col-10 col-sm-5">
-					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-exclamation-circle text-info", "text"->"If already installed will be displayed as well.")){
+					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-info-circle  text-info", "text"->"If already installed will be displayed as well.")){
 						<div class="font-family_HiraginoSans-W3 fontPreview">
 							色はにほへど 散りぬるを 我が世たれぞ 常ならむ 有為の奥山 今日越えて 浅き夢見じ 酔ひもせず
 						</div>
@@ -101,7 +101,7 @@
 				</div>
 				<div class="col-2 col-sm-1 fontEqual">=</div>
 				<div class="col-10 col-sm-5">
-					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-exclamation-circle text-info", "text"->"If available browsers will be displayed as well.(Adobe-Japan1)")){
+					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-info-circle  text-info", "text"->"If available browsers will be displayed as well.(Adobe-Japan1)")){
 						<div class="font-family_HiraginoSans-W3 fontPreview">
 							邉&#xe0100;邉&#xe0101;邉&#xe0102;邉&#xe0103;邉&#xe0104;邉&#xe0105;邉&#xe0106;邉&#xe0107;邉&#xe0108;邉&#xe0109;邉&#xe010a;邉&#xe010b;邉&#xe010c;邉&#xe010d;邉&#xe010e;
 						</div>
@@ -132,7 +132,7 @@
 				</div>
 				<div class="col-2 col-sm-1 fontEqual">=</div>
 				<div class="col-10 col-sm-5">
-					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-exclamation-circle text-info", "text"->"If already installed will be displayed as well.")){
+					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-info-circle  text-info", "text"->"If already installed will be displayed as well.")){
 						<div class="font-family_IPAmjMincho fontPreview">
 							色はにほへど 散りぬるを 我が世たれぞ 常ならむ 有為の奥山 今日越えて 浅き夢見じ 酔ひもせず
 						</div>
@@ -149,7 +149,7 @@
 				</div>
 				<div class="col-2 col-sm-1 fontEqual">=</div>
 				<div class="col-10 col-sm-5">
-					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-exclamation-circle text-info", "text"->"If available browsers will be displayed as well.(Moji_Joho)")){
+					@components.figure(Map("id"->"", "class"->"d-block", "icon"->"fas fa-info-circle  text-info", "text"->"If available browsers will be displayed as well.(Moji_Joho)")){
 						<div class="font-family_IPAmjMincho fontPreview">
 							邉&#xe010f;邉&#xe0110;邉&#xe0111;邉&#xe0112;邉&#xe0113;邉&#xe0114;邉&#xe0115;邉&#xe0116;邉&#xe0117;邉&#xe0118;邉&#xe0119;邉&#xe011a;邉&#xe011b;邉&#xe011c;邉&#xe011d;邉&#xe011e;
 						</div>
