--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -144,6 +144,7 @@
 							Map("name"->"Material Icons", "icon"->"fas fa-font", "link"->"http://google.github.io/material-design-icons/", "info"->""),
 							Map("name"->"Ionicons", "icon"->"fas fa-female", "link"->"https://ionicons.com/", "info"->""),
 							Map("name"->"IcoFont", "icon"->"fas fa-font", "link"->"http://icofont.com/", "info"->""),
+							Map("name"->"Twemoji", "icon"->"fab fa-twitter", "link"->"https://twemoji.twitter.com/", "info"->""),
 							Map("name"->"PostgreSQL JDBC", "icon"->"fas fa-database", "link"->"https://jdbc.postgresql.org", "info"->""),
 							Map("name"->"jQuery UI", "icon"->"fas fa-mouse-pointer", "link"->"http://jqueryui.com", "info"->""),
 							Map("name"->"jQuery UI Touch Punch", "icon"->"fas fa-hand-point-up", "link"->"http://touchpunch.furf.com", "info"->""),
