--- a/public/stylesheets/bootstrapfix.css
+++ b/public/stylesheets/bootstrapfix.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
 /* provisional coped for Edge scroll of Bootstrap 4.1.1 */
+/* https://github.com/twbs/bootstrap/issues/22920 */
 
 .table-responsive {
 	-ms-overflow-style: initial;
