Follow Play Framework v2.7.0-M2

--- a/app/views/components/forms/customcheckbox.scala.html
+++ b/app/views/components/forms/customcheckbox.scala.html
@@ -10,6 +10,6 @@
 @(prop:scala.collection.immutable.Map[String, String])
 
 <div id="@prop.getOrElse("id", "")" class="custom-control custom-checkbox custom-control@("-inline".when(Boolean.valueOf(prop.getOrElse("inline", "false")))) @Attributes.classValue(prop)" @Html(Attributes.datas(prop))>
-	<input type="checkbox" name="@prop.getOrElse("name", "")" id="custom-@prop.getOrElse("id", "")" class="custom-control-input" @("disabled".when(!Boolean.valueOf(prop.getOrElse("enabled", "true")))) @("checked".when(Boolean.valueOf(prop.getOrElse("selected", ""))))>
+	<input type="checkbox" name="@prop.getOrElse("name", "")" id="custom-@prop.getOrElse("id", "")" class="custom-control-input" @("disabled".when(!Boolean.valueOf(prop.getOrElse("enabled", "true")))) @("checked".when(Boolean.valueOf(prop.getOrElse("selected", "")))) tabindex="@prop.getOrElse("tabindex", "")">
 	<label class="custom-control-label" for="custom-@prop.getOrElse("id", "")">@Html(prop.getOrElse("text", "&nbsp;"))</label>
 </div>
