--- a/app/views/lab/application/download.scala.html
+++ b/app/views/lab/application/download.scala.html
@@ -205,7 +205,7 @@
 						<h4 class="headline">HTML5</h4>
 						@components.badge(Map("id"->"DownloadAttribute", "type"->"danger", "text"->"Download attribute"))
 						<br>
-						@components.linkbutton(Map("id"->"html5", "link"->"https://www.playframework.com/assets/images/logos/play_full_color.svg", "type"->"primary", "outline"->"true", "icon"->"fas fa-download", "text"->Messages(MessageKeys.DOWNLOAD), "download"->null))
+						@components.linkbutton(Map("id"->"html5", "link"->"https://www.playframework.com/assets/images/logos/play_full_color.svg", "type"->"primary", "outline"->"true", "icon"->"fas fa-download", "text"->Messages(MessageKeys.DOWNLOAD), "download"->""))
 					</div>
 				</div>
 			</div>
