--- a/app/views/lab/ui/formswitch.scala.html
+++ b/app/views/lab/ui/formswitch.scala.html
@@ -54,33 +54,33 @@
 									<div class="form-group row">
 										<label for="" class="col-sm-3 col-form-label required">with text</label>
 										<div class="col-sm-9">
-											@components.forms.customswitch(Map("id"->"defaultTextSwitch", "name"->"default", "text"->"One"))
-											@components.forms.customswitch(Map("id"->"uncheckedTextSwitch", "name"->"unchecked", "text"->"Two", "selected"->"false"))
-											@components.forms.customswitch(Map("id"->"checkedTextSwitch", "name"->"checked", "text"->"Three", "selected"->"true"))
+											@components.forms.customswitch(Map("id"->"defaultTextSwitch", "name"->"default", "text"->"One", "tabindex"->"4"))
+											@components.forms.customswitch(Map("id"->"uncheckedTextSwitch", "name"->"unchecked", "text"->"Two", "selected"->"false", "tabindex"->"5"))
+											@components.forms.customswitch(Map("id"->"checkedTextSwitch", "name"->"checked", "text"->"Three", "selected"->"true", "tabindex"->"6"))
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-3 col-form-label required">Disabled</label>
 										<div class="col-sm-9">
-											@components.forms.customswitch(Map("id"->"disabledDefaultSwitch", "name"->"default", "text"->"One", "enabled"->"false"))
-											@components.forms.customswitch(Map("id"->"disableduncheckedSwitch", "name"->"unchecked", "text"->"Two", "enabled"->"false", "selected"->"false"))
-											@components.forms.customswitch(Map("id"->"disabledcheckedSwitch", "name"->"checked", "text"->"Three", "enabled"->"false", "selected"->"true"))
+											@components.forms.customswitch(Map("id"->"disabledDefaultSwitch", "name"->"default", "text"->"One", "enabled"->"false", "tabindex"->"7"))
+											@components.forms.customswitch(Map("id"->"disableduncheckedSwitch", "name"->"unchecked", "text"->"Two", "enabled"->"false", "selected"->"false", "tabindex"->"8"))
+											@components.forms.customswitch(Map("id"->"disabledcheckedSwitch", "name"->"checked", "text"->"Three", "enabled"->"false", "selected"->"true", "tabindex"->"9"))
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-3 col-form-label required">Inline</label>
 										<div class="col-sm-9">
-											@components.forms.customswitch(Map("id"->"defaultSwitchInline", "name"->"default", "inline"->"true"))
-											@components.forms.customswitch(Map("id"->"uncheckedSwitchInline", "name"->"unchecked", "inline"->"true", "selected"->"false"))
-											@components.forms.customswitch(Map("id"->"checkedSwitchInline", "name"->"checked", "inline"->"true", "selected"->"true"))
+											@components.forms.customswitch(Map("id"->"defaultSwitchInline", "name"->"default", "inline"->"true", "tabindex"->"10"))
+											@components.forms.customswitch(Map("id"->"uncheckedSwitchInline", "name"->"unchecked", "inline"->"true", "selected"->"false", "tabindex"->"11"))
+											@components.forms.customswitch(Map("id"->"checkedSwitchInline", "name"->"checked", "inline"->"true", "selected"->"true", "tabindex"->"12"))
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-3 col-form-label required">Inline with text</label>
 										<div class="col-sm-9">
-											@components.forms.customswitch(Map("id"->"defaultTextSwitchInline", "name"->"default", "text"->"One", "inline"->"true"))
-											@components.forms.customswitch(Map("id"->"uncheckedTextSwitchInline", "name"->"unchecked", "text"->"Two", "inline"->"true", "selected"->"false"))
-											@components.forms.customswitch(Map("id"->"checkedTextSwitchInline", "name"->"checked", "text"->"Three", "inline"->"true", "selected"->"true"))
+											@components.forms.customswitch(Map("id"->"defaultTextSwitchInline", "name"->"default", "text"->"One", "inline"->"true", "tabindex"->"13"))
+											@components.forms.customswitch(Map("id"->"uncheckedTextSwitchInline", "name"->"unchecked", "text"->"Two", "inline"->"true", "selected"->"false", "tabindex"->"14"))
+											@components.forms.customswitch(Map("id"->"checkedTextSwitchInline", "name"->"checked", "text"->"Three", "inline"->"true", "selected"->"true", "tabindex"->"15"))
 										</div>
 									</div>
 								}
