--- a/app/views/bootstrap/component/form.scala.html
+++ b/app/views/bootstrap/component/form.scala.html
@@ -54,33 +54,33 @@
 									<div class="form-group row">
 										<label for="" class="col-sm-3 col-form-label required">with text</label>
 										<div class="col-sm-9">
-											@components.forms.customcheckbox(Map("id"->"defaultTextCheckbox", "name"->"default", "text"->"One"))
-											@components.forms.customcheckbox(Map("id"->"uncheckedTextCheckbox", "name"->"unchecked", "text"->"Two", "selected"->"false"))
-											@components.forms.customcheckbox(Map("id"->"checkedTextCheckbox", "name"->"checked", "text"->"Three", "selected"->"true"))
+											@components.forms.customcheckbox(Map("id"->"defaultTextCheckbox", "name"->"default", "text"->"One", "tabindex"->"4"))
+											@components.forms.customcheckbox(Map("id"->"uncheckedTextCheckbox", "name"->"unchecked", "text"->"Two", "selected"->"false", "tabindex"->"5"))
+											@components.forms.customcheckbox(Map("id"->"checkedTextCheckbox", "name"->"checked", "text"->"Three", "selected"->"true", "tabindex"->"6"))
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-3 col-form-label required">Disabled</label>
 										<div class="col-sm-9">
-											@components.forms.customcheckbox(Map("id"->"disabledDefaultCheckbox", "name"->"default", "text"->"One", "enabled"->"false"))
-											@components.forms.customcheckbox(Map("id"->"disableduncheckedCheckbox", "name"->"unchecked", "text"->"Two", "enabled"->"false", "selected"->"false"))
-											@components.forms.customcheckbox(Map("id"->"disabledcheckedCheckbox", "name"->"checked", "text"->"Three", "enabled"->"false", "selected"->"true"))
+											@components.forms.customcheckbox(Map("id"->"disabledDefaultCheckbox", "name"->"default", "text"->"One", "enabled"->"false", "tabindex"->"7"))
+											@components.forms.customcheckbox(Map("id"->"disableduncheckedCheckbox", "name"->"unchecked", "text"->"Two", "enabled"->"false", "selected"->"false", "tabindex"->"8"))
+											@components.forms.customcheckbox(Map("id"->"disabledcheckedCheckbox", "name"->"checked", "text"->"Three", "enabled"->"false", "selected"->"true", "tabindex"->"9"))
 										</div>
 									</div>
 									<div class="form-group row d-none">
 										<label for="" class="col-sm-3 col-form-label required">Inline</label>
 										<div class="col-sm-9">
-											@components.forms.customcheckbox(Map("id"->"defaultCheckboxInline", "name"->"default", "inline"->"true"))
-											@components.forms.customcheckbox(Map("id"->"uncheckedCheckboxInline", "name"->"unchecked", "inline"->"true", "selected"->"false"))
-											@components.forms.customcheckbox(Map("id"->"checkedCheckboxInline", "name"->"checked", "inline"->"true", "selected"->"true"))
+											@components.forms.customcheckbox(Map("id"->"defaultCheckboxInline", "name"->"default", "inline"->"true", "tabindex"->"10"))
+											@components.forms.customcheckbox(Map("id"->"uncheckedCheckboxInline", "name"->"unchecked", "inline"->"true", "selected"->"false", "tabindex"->"11"))
+											@components.forms.customcheckbox(Map("id"->"checkedCheckboxInline", "name"->"checked", "inline"->"true", "selected"->"true", "tabindex"->"12"))
 										</div>
 									</div>
 									<div class="form-group row">
 										<label for="" class="col-sm-3 col-form-label required">Inline with text</label>
 										<div class="col-sm-9">
-											@components.forms.customcheckbox(Map("id"->"defaultTextCheckboxInline", "name"->"default", "text"->"One", "inline"->"true"))
-											@components.forms.customcheckbox(Map("id"->"uncheckedTextCheckboxInline", "name"->"unchecked", "text"->"Two", "inline"->"true", "selected"->"false"))
-											@components.forms.customcheckbox(Map("id"->"checkedTextCheckboxInline", "name"->"checked", "text"->"Three", "inline"->"true", "selected"->"true"))
+											@components.forms.customcheckbox(Map("id"->"defaultTextCheckboxInline", "name"->"default", "text"->"One", "inline"->"true", "tabindex"->"13"))
+											@components.forms.customcheckbox(Map("id"->"uncheckedTextCheckboxInline", "name"->"unchecked", "text"->"Two", "inline"->"true", "selected"->"false", "tabindex"->"14"))
+											@components.forms.customcheckbox(Map("id"->"checkedTextCheckboxInline", "name"->"checked", "text"->"Three", "inline"->"true", "selected"->"true", "tabindex"->"15"))
 										</div>
 									</div>
 								}
@@ -114,9 +114,9 @@
 										<label for="" class="col-sm-3 col-form-label required">with text</label>
 										<div class="col-sm-9">
 											@components.forms.customradio(Map("id"->"", "name"->"withText"), List(
-												Map("id"->"defaultTextRadio", "text"->"One"),
-												Map("id"->"uncheckedTextRadio", "text"->"Two", "selected"->"false"),
-												Map("id"->"checkedTextRadio", "text"->"Three", "selected"->"true")
+												Map("id"->"defaultTextRadio", "text"->"One", "tabindex"->"19"),
+												Map("id"->"uncheckedTextRadio", "text"->"Two", "selected"->"false", "tabindex"->"20"),
+												Map("id"->"checkedTextRadio", "text"->"Three", "selected"->"true", "tabindex"->"21")
 											))
 										</div>
 									</div>
@@ -124,9 +124,9 @@
 										<label for="" class="col-sm-3 col-form-label required">Disabled</label>
 										<div class="col-sm-9">
 											@components.forms.customradio(Map("id"->"", "name"->"disabled", "enabled"->"false"), List(
-												Map("id"->"disabledDefaultRadio", "text"->"One"),
-												Map("id"->"disableduncheckedRadio", "text"->"Two", "selected"->"false"),
-												Map("id"->"disabledcheckedRadio", "text"->"Three", "selected"->"true")
+												Map("id"->"disabledDefaultRadio", "text"->"One", "tabindex"->"22"),
+												Map("id"->"disableduncheckedRadio", "text"->"Two", "selected"->"false", "tabindex"->"23"),
+												Map("id"->"disabledcheckedRadio", "text"->"Three", "selected"->"true", "tabindex"->"24")
 											))
 										</div>
 									</div>
@@ -134,9 +134,9 @@
 										<label for="" class="col-sm-3 col-form-label required">Inline</label>
 										<div class="col-sm-9">
 											@components.forms.customradio(Map("id"->"", "name"->"inline", "inline"->"true"), List(
-												Map("id"->"defaultRadioInline"),
-												Map("id"->"uncheckedRadioInline", "selected"->"false"),
-												Map("id"->"checkedRadioInline", "selected"->"true")
+												Map("id"->"defaultRadioInline", "tabindex"->"25"),
+												Map("id"->"uncheckedRadioInline", "selected"->"false", "tabindex"->"26"),
+												Map("id"->"checkedRadioInline", "selected"->"true", "tabindex"->"27")
 											))
 										</div>
 									</div>
@@ -144,9 +144,9 @@
 										<label for="" class="col-sm-3 col-form-label required">Inline with text</label>
 										<div class="col-sm-9">
 											@components.forms.customradio(Map("id"->"", "name"->"inlineWithText", "inline"->"true"), List(
-												Map("id"->"defaultTextRadioInline", "text"->"One"),
-												Map("id"->"uncheckedTextRadioInline", "text"->"Two", "selected"->"false"),
-												Map("id"->"checkedTextRadioInline", "text"->"Three", "selected"->"true")
+												Map("id"->"defaultTextRadioInline", "text"->"One", "tabindex"->"28"),
+												Map("id"->"uncheckedTextRadioInline", "text"->"Two", "selected"->"false", "tabindex"->"29"),
+												Map("id"->"checkedTextRadioInline", "text"->"Three", "selected"->"true", "tabindex"->"30")
 											))
 										</div>
 									</div>
