--- a/public/themes/japan/theme.css
+++ b/public/themes/japan/theme.css
@@ -94,3 +94,6 @@ hr.separator {
 .custom-switch>input:checked ~ .custom-switch-base {
 	background: #234868 !important;
 }
+.custom-switch>input:focus ~ .custom-switch-base {
+	box-shadow: 0 0 0 1px #f6f7f7, 0 0 0 .2rem rgba(35, 72, 104, .25);
+}
