--- a/public/themes/pretty/theme.css
+++ b/public/themes/pretty/theme.css
@@ -135,3 +135,6 @@ hr.separator:after {
 .custom-switch>input:checked ~ .custom-switch-base {
 	background: #e88cae !important;
 }
+.custom-switch>input:focus ~ .custom-switch-base {
+	box-shadow: 0 0 0 1px #f8fffa, 0 0 0 .2rem rgba(232, 140, 174, .25);
+}
