--- a/app/views/lab/application/ivd.scala.html
+++ b/app/views/lab/application/ivd.scala.html
@@ -46,7 +46,7 @@
 						<h4 class="headline">@Messages(MessageKeys.FONT_HIRAGINOSANS__W3)</h4>
 						<div class="row form-group">
 							<div class="col-12">
-								<input id="adobe-japan1Text" class="form-control inputText adobe-japan1" type="text" placeholder="" value="">
+								<input id="adobe-japan1Text" class="form-control h-72p inputText adobe-japan1" type="text" placeholder="" value="">
 							</div>
 						</div>
 					</div>
@@ -55,7 +55,7 @@
 						<h4 class="headline">@Messages(MessageKeys.FONT_IPAMJMINCHO)</h4>
 						<div class="row form-group">
 							<div class="col-12">
-								<input id="moji_johoText" class="form-control inputText moji_joho" type="text" placeholder="" value="">
+								<input id="moji_johoText" class="form-control h-72p inputText moji_joho" type="text" placeholder="" value="">
 							</div>
 						</div>
 					</div>
