--- a/app/views/lab/ui/notification.scala.html
+++ b/app/views/lab/ui/notification.scala.html
@@ -76,7 +76,7 @@
 					</div>
 
 					<div class="mb-3 secret">
-						<h2 class="headline">Progress</h2>
+						<h2 class="headline">@Messages(MessageKeys.PROGRESS)</h2>
 						@components.button(Map("id"->"progressAlertButton", "type"->"primary", "outline"->"true", "icon"->"far fa-comment", "text"->Messages(MessageKeys.NOTIFICATION)))
 					</div>
 				</div>
