--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -127,50 +127,63 @@
 					<div class="card-columns w-100">
 						@license.liblist(List(
 							Map("name"->common.system.System.getImage().getName(), "icon"->"far fa-image", "link"->common.system.System.getImage().getCredit().getLink().toString(), "info"->common.system.System.getImage().getInformation()),
-							Map("name"->"OpenJDK", "icon"->"fas fa-coffee", "link"->"http://jdk.java.net/10/", "info"->""),
-							Map("name"->"Hibernate", "icon"->"fas fa-database", "link"->"http://hibernate.org", "info"->""),
-							Map("name"->"geckodriver", "icon"->"fab fa-firefox", "link"->" https://github.com/mozilla/geckodriver", "info"->""),
-							Map("name"->"sbt-dependency-graph", "icon"->"fas fa-project-diagram", "link"->"https://github.com/jrudolph/sbt-dependency-graph", "info"->""),
+
 							Map("name"->"Play Framework", "icon"->"ii ii-play", "link"->"https://www.playframework.com", "info"->"The High Velocity Web Framework"),
+							Map("name"->"Play JSON", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/playframework/play-json", "info"->""),
+							Map("name"->"Play WS", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/playframework/play-ws", "info"->""),
 							Map("name"->"play-mailer", "icon"->"far fa-envelope", "link"->"https://github.com/playframework/play-mailer", "info"->""),
-							Map("name"->"MapStruct", "icon"->"fas fa-cubes", "link"->"http://mapstruct.org", "info"->""),
-							Map("name"->"core-js", "icon"->"fab fa-js", "link"->"https://github.com/zloirock/core-js", "info"->""),
-							Map("name"->"jQuery", "icon"->"fab fa-js", "link"->"http://jquery.com", "info"->""),
+
 							Map("name"->"Bootstrap", "icon"->"ii ii-bootstrap", "link"->"http://getbootstrap.com", "info"->"The most popular HTML, CSS, and JavaScript framework for developing responsive, mobile first projects on the web."),
 							Map("name"->"Bootstrap Docs", "icon"->"fas fa-book", "link"->"http://getbootstrap.com", "info"->""),
 							Map("name"->"Popper.js", "icon"->"fas fa-comment-alt", "link"->"https://popper.js.org", "info"->""),
 							Map("name"->"Tether", "icon"->"fas fa-comment-alt", "link"->"http://github.hubspot.com/tether/", "info"->""),
+							Map("name"->"Hammer.js", "icon"->"fas fa-hand-point-up", "link"->"http://hammerjs.github.io", "info"->""),
+
 							Map("name"->"Font Awesome", "icon"->"fas fa-flag", "link"->"https://fontawesome.com", "info"->""),
 							Map("name"->"Material Icons", "icon"->"fas fa-font", "link"->"http://google.github.io/material-design-icons/", "info"->""),
 							Map("name"->"Ionicons", "icon"->"fas fa-female", "link"->"https://ionicons.com/", "info"->""),
 							Map("name"->"IcoFont", "icon"->"fas fa-font", "link"->"http://icofont.com/", "info"->""),
 							Map("name"->"Twemoji", "icon"->"fab fa-twitter", "link"->"https://twemoji.twitter.com/", "info"->""),
+
+							Map("name"->"Hibernate", "icon"->"fas fa-database", "link"->"http://hibernate.org", "info"->""),
+							Map("name"->"H2 database engine", "icon"->"fas fa-database", "link"->"http://www.h2database.com", "info"->""),
 							Map("name"->"PostgreSQL JDBC", "icon"->"fas fa-database", "link"->"https://jdbc.postgresql.org", "info"->""),
-							Map("name"->"jQuery UI", "icon"->"fas fa-mouse-pointer", "link"->"http://jqueryui.com", "info"->""),
-							Map("name"->"jQuery UI Touch Punch", "icon"->"fas fa-hand-point-up", "link"->"http://touchpunch.furf.com", "info"->""),
-							Map("name"->"Super CSV", "icon"->"fas fa-th", "link"->"http://super-csv.github.io/super-csv", "info"->""),
-							Map("name"->"POI", "icon"->"far fa-file-alt", "link"->"https://poi.apache.org", "info"->""),
-							Map("name"->"Tika", "icon"->"far fa-file-alt", "link"->"http://tika.apache.org", "info"->""),
-							Map("name"->"ZXing", "icon"->"fas fa-barcode", "link"->"https://zxing.appspot.com", "info"->""),
+							Map("name"->"SchemaSpy", "icon"->"fas fa-database", "link"->"http://schemaspy.org", "info"->""),
+
+							Map("name"->"OpenJDK", "icon"->"fas fa-coffee", "link"->"http://jdk.java.net/10/", "info"->""),
+							Map("name"->"mockito", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/mockito/mockito", "info"->""),
 							Map("name"->"Commons Text", "icon"->"fas fa-text-width", "link"->"http://commons.apache.org/proper/commons-text/", "info"->""),
-							Map("name"->"PDFBox", "icon"->"far fa-file-pdf", "link"->"http://pdfbox.apache.org", "info"->""),
-							Map("name"->"JasperReports® Library", "icon"->"far fa-file-alt", "link"->"https://community.jaspersoft.com/project/jasperreports-library", "info"->""),
-							Map("name"->"Barbecue", "icon"->"fas fa-barcode", "link"->"http://barbecue.sourceforge.net", "info"->""),
-							Map("name"->"Barcode4J", "icon"->"fas fa-barcode", "link"->"http://barcode4j.sourceforge.net", "info"->""),
-							Map("name"->"Batik", "icon"->"fas fa-pencil-alt", "link"->"https://xmlgraphics.apache.org/batik/", "info"->""),
-							Map("name"->"IPAex", "icon"->"fas fa-font", "link"->"http://ipafont.ipa.go.jp", "info"->""),
-							Map("name"->"IPAmjMincho", "icon"->"fas fa-font", "link"->"http://mojikiban.ipa.go.jp/1300.html", "info"->""),
+							Map("name"->"MapStruct", "icon"->"fas fa-cubes", "link"->"http://mapstruct.org", "info"->""),
+							Map("name"->"Failsafe", "icon"->"fas fa-shield-alt", "link"->"https://github.com/jhalterman/failsafe", "info"->""),
+							Map("name"->"Tika", "icon"->"far fa-file-alt", "link"->"http://tika.apache.org", "info"->""),
+							Map("name"->"Batik", "icon"->"fas fa-draw-polygon", "link"->"https://xmlgraphics.apache.org/batik/", "info"->""),
 							Map("name"->"jsoup", "icon"->"fas fa-code", "link"->"http://jsoup.org", "info"->""),
 							Map("name"->"dom4j", "icon"->"fas fa-code", "link"->"https://dom4j.github.io", "info"->""),
 							Map("name"->"javapoet", "icon"->"fas fa-cube", "link"->"https://github.com/square/javapoet", "info"->""),
 							Map("name"->"mustache.java", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/spullara/mustache.java", "info"->""),
 							Map("name"->"Zip4j", "icon"->"far fa-file-archive", "link"->"http://www.lingala.net/zip4j", "info"->""),
+							Map("name"->"Logback JSON encoder", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/logstash/logstash-logback-encoder", "info"->""),
+
+							Map("name"->"ZXing", "icon"->"fas fa-barcode", "link"->"https://zxing.appspot.com", "info"->""),
+							Map("name"->"Barbecue", "icon"->"fas fa-barcode", "link"->"http://barbecue.sourceforge.net", "info"->""),
+							Map("name"->"Barcode4J", "icon"->"fas fa-barcode", "link"->"http://barcode4j.sourceforge.net", "info"->""),
+
+							Map("name"->"POI", "icon"->"far fa-file-alt", "link"->"https://poi.apache.org", "info"->""),
+							Map("name"->"Super CSV", "icon"->"fas fa-th", "link"->"http://super-csv.github.io/super-csv", "info"->""),
+							Map("name"->"PDFBox", "icon"->"far fa-file-pdf", "link"->"http://pdfbox.apache.org", "info"->""),
+							Map("name"->"JasperReports® Library", "icon"->"far fa-file-alt", "link"->"https://community.jaspersoft.com/project/jasperreports-library", "info"->""),
+
 							Map("name"->"Weld", "icon"->"fas fa-syringe", "link"->"http://weld.cdi-spec.org", "info"->""),
 							Map("name"->"JBoss Marshalling", "icon"->"fas fa-pencil-alt", "link"->"http://www.jboss.org/jbossmarshalling", "info"->""),
 							Map("name"->"JBeret", "icon"->"fas fa-tasks", "link"->"https://github.com/jberet/jsr352", "info"->""),
 							Map("name"->"WildFly Security Manager", "icon"->"fas fa-key", "link"->"https://github.com/wildfly-security/security-manager", "info"->""),
-							Map("name"->"Logback JSON encoder", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/logstash/logstash-logback-encoder", "info"->""),
-							Map("name"->"SchemaSpy", "icon"->"fas fa-database", "link"->"http://schemaspy.org", "info"->""),
+
+							Map("name"->"jQuery", "icon"->"fab fa-js", "link"->"http://jquery.com", "info"->""),
+							Map("name"->"jQuery UI", "icon"->"fas fa-mouse-pointer", "link"->"http://jqueryui.com", "info"->""),
+							Map("name"->"jQuery UI Touch Punch", "icon"->"fas fa-hand-point-up", "link"->"http://touchpunch.furf.com", "info"->""),
+
+							Map("name"->"core-js", "icon"->"fab fa-js", "link"->"https://github.com/zloirock/core-js", "info"->""),
+							Map("name"->"moment", "icon"->"far fa-clock", "link"->"http://momentjs.com", "info"->""),
 							Map("name"->"Bootbox.js", "icon"->"far fa-window-maximize", "link"->"http://bootboxjs.com", "info"->""),
 							Map("name"->"pickadate", "icon"->"fas fa-calendar-alt", "link"->"http://amsul.ca/pickadate.js", "info"->""),
 							Map("name"->"bootstrap-slider", "icon"->"fas fa-sliders-h", "link"->"https://github.com/seiyria/bootstrap-slider", "info"->""),
@@ -178,41 +191,46 @@
 							Map("name"->"DataTables", "icon"->"fas fa-table", "link"->"http://www.datatables.net", "info"->""),
 							Map("name"->"summernote", "icon"->"far fa-edit", "link"->"http://summernote.org", "info"->""),
 							Map("name"->"Handsontable", "icon"->"fas fa-table", "link"->"https://handsontable.com", "info"->""),
-							Map("name"->"Chart.js", "icon"->"far fa-chart-bar", "link"->"http://www.chartjs.org", "info"->""),
 							Map("name"->"slick", "icon"->"far fa-image", "link"->"http://kenwheeler.github.io/slick/", "info"->""),
 							Map("name"->"Cropper.js", "icon"->"fas fa-crop", "link"->"https://fengyuanchen.github.io/cropperjs/", "info"->""),
 							Map("name"->"TwentyTwenty", "icon"->"far fa-image", "link"->"https://zurb.com/playground/twentytwenty", "info"->""),
-							Map("name"->"D3.js", "icon"->"fas fa-chart-area", "link"->"https://d3js.org", "info"->""),
-							Map("name"->"d3-geo-projection", "icon"->"fas fa-globe", "link"->"https://github.com/d3/d3-geo-projection", "info"->""),
-							Map("name"->"JQVMAP", "icon"->"far fa-map", "link"->"https://www.10bestdesign.com/jqvmap/", "info"->""),
 							Map("name"->"highlight.js", "icon"->"fas fa-code", "link"->"https://highlightjs.org", "info"->""),
 							Map("name"->"diff2html", "icon"->"fas fa-pencil-alt", "link"->"https://diff2html.xyz", "info"->""),
-							Map("name"->"marked", "icon"->"fas fa-code", "link"->"https://github.com/chjj/marked", "info"->""),
-							Map("name"->"plotly.js", "icon"->"far fa-chart-bar", "link"->"https://plot.ly/javascript/", "info"->""),
+							Map("name"->"marked", "icon"->"fab fa-markdown", "link"->"https://github.com/chjj/marked", "info"->""),
 							Map("name"->"Parsley", "icon"->"fas fa-pencil-alt", "link"->"http://parsleyjs.org", "info"->""),
-							Map("name"->"Hammer.js", "icon"->"fas fa-hand-point-up", "link"->"http://hammerjs.github.io", "info"->""),
 							Map("name"->"bootstrap-colorpicker", "icon"->"fas fa-tint", "link"->"https://itsjavi.com/bootstrap-colorpicker/", "info"->""),
 							Map("name"->"jqTree", "icon"->"fas fa-sitemap", "link"->"http://mbraak.github.io/jqTree/", "info"->""),
-							Map("name"->"Snap.svg", "icon"->"fas fa-pencil-alt", "link"->"http://snapsvg.io/", "info"->""),
+							Map("name"->"Snap.svg", "icon"->"fas fa-draw-polygon", "link"->"http://snapsvg.io/", "info"->""),
 							Map("name"->"Frappé Gantt", "icon"->"fas fa-pencil-alt", "link"->"https://frappe.github.io/gantt/", "info"->""),
 							Map("name"->"Viz.js", "icon"->"fas fa-share-alt", "link"->"https://github.com/mdaines/viz.js", "info"->""),
-							Map("name"->"PDF.js", "icon"->"far fa-file-pdf", "link"->"https://github.com/mozilla/pdf.js", "info"->""),
-							Map("name"->"LibreOffice", "icon"->"far fa-file-alt", "link"->"https://www.libreoffice.org", "info"->""),
-							Map("name"->"wkhtmltopdf", "icon"->"far fa-file-pdf", "link"->"https://wkhtmltopdf.org", "info"->""),
 							Map("name"->"3Dmol.js", "icon"->"fas fa-dna", "link"->"http://3dmol.csb.pitt.edu", "info"->""),
-							Map("name"->"moment", "icon"->"far fa-clock", "link"->"http://momentjs.com", "info"->""),
 							Map("name"->"FullCalendar", "icon"->"fas fa-calendar-alt", "link"->"http://fullcalendar.io", "info"->""),
-							Map("name"->"OpenLayers", "icon"->"far fa-map", "link"->"http://www.openlayers.org/", "info"->""),
 							Map("name"->"Shepherd", "icon"->"fas fa-binoculars", "link"->"http://github.hubspot.com/shepherd/docs/welcome/", "info"->""),
-							Map("name"->"QuaggaJS", "icon"->"fas fa-barcode", "link"->"https://github.com/serratus/quaggaJS", "info"->""),
-							Map("name"->"jsQR", "icon"->"fas fa-qrcode", "link"->"https://github.com/cozmo/jsQR", "info"->""),
-							Map("name"->"Material Icons", "icon"->"fas fa-font", "link"->"http://google.github.io/material-design-icons/", "info"->""),
-							Map("name"->"IcoFont", "icon"->"fas fa-font", "link"->"http://icofont.com/", "info"->""),
 							Map("name"->"Holder.js", "icon"->"fas fa-square", "link"->"http://imsky.github.io/holder/", "info"->""),
 							Map("name"->"clipboard.js", "icon"->"fas fa-clipboard", "link"->"https://clipboardjs.com/", "info"->""),
-							Map("name"->"mockito", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/mockito/mockito", "info"->""),
+
+							Map("name"->"Chart.js", "icon"->"far fa-chart-bar", "link"->"http://www.chartjs.org", "info"->""),
+							Map("name"->"plotly.js", "icon"->"far fa-chart-bar", "link"->"https://plot.ly/javascript/", "info"->""),
+							Map("name"->"D3.js", "icon"->"fas fa-chart-area", "link"->"https://d3js.org", "info"->""),
+							Map("name"->"d3-geo-projection", "icon"->"fas fa-globe", "link"->"https://github.com/d3/d3-geo-projection", "info"->""),
+							Map("name"->"OpenLayers", "icon"->"far fa-map", "link"->"http://www.openlayers.org/", "info"->""),
+							Map("name"->"JQVMAP", "icon"->"far fa-map", "link"->"https://www.10bestdesign.com/jqvmap/", "info"->""),
+
+							Map("name"->"PDF.js", "icon"->"far fa-file-pdf", "link"->"https://github.com/mozilla/pdf.js", "info"->""),
+
+							Map("name"->"QuaggaJS", "icon"->"fas fa-barcode", "link"->"https://github.com/serratus/quaggaJS", "info"->""),
+							Map("name"->"jsQR", "icon"->"fas fa-qrcode", "link"->"https://github.com/cozmo/jsQR", "info"->""),
+
 							Map("name"->"Mocha", "icon"->"fas fa-stethoscope", "link"->"http://mochajs.org", "info"->""),
 							Map("name"->"Chai", "icon"->"fas fa-pencil-alt", "link"->"http://chaijs.com", "info"->""),
+
+							Map("name"->"IPAex", "icon"->"fas fa-font", "link"->"http://ipafont.ipa.go.jp", "info"->""),
+							Map("name"->"IPAmjMincho", "icon"->"fas fa-font", "link"->"http://mojikiban.ipa.go.jp/1300.html", "info"->""),
+
+							Map("name"->"geckodriver", "icon"->"fab fa-firefox", "link"->" https://github.com/mozilla/geckodriver", "info"->""),
+							Map("name"->"sbt-dependency-graph", "icon"->"fas fa-project-diagram", "link"->"https://github.com/jrudolph/sbt-dependency-graph", "info"->""),
+							Map("name"->"LibreOffice", "icon"->"far fa-file-alt", "link"->"https://www.libreoffice.org", "info"->""),
+							Map("name"->"wkhtmltopdf", "icon"->"far fa-file-pdf", "link"->"https://wkhtmltopdf.org", "info"->""),
 							Map("name"->"Natural Earth", "icon"->"fas fa-globe", "link"->"http://www.naturalearthdata.com", "info"->"")
 						))
 					</div>
