--- a/app/views/bootstrap/component/linkbutton.scala.html
+++ b/app/views/bootstrap/component/linkbutton.scala.html
@@ -66,6 +66,18 @@
 						@components.linkbutton(Map("id"->"", "type"->"secondary", "block"->"true", "icon"->"fas fa-spinner fa-pulse", "text"->"Block level button"))
 					</div>
 					<div class="mb-3">
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-check-circle", "text"->"Button", "iconType"->"success"))
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-info-circle", "text"->"Button", "iconType"->"info"))
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-exclamation-triangle", "text"->"Button", "iconType"->"warning"))
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-ban", "text"->"Button", "iconType"->"danger"))
+					</div>
+					<div class="mb-3">
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "text"->"Button", "badge"->"New", "iconType"->"success"))
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "text"->"Button", "badge"->"1", "iconType"->"info"))
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "text"->"Button", "badge"->"2", "iconType"->"warning"))
+						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "text"->"Button", "badge"->"3", "iconType"->"danger"))
+					</div>
+					<div class="mb-3">
 						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-check-circle", "text"->"Button", "badge"->"New", "iconType"->"success"))
 						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-info-circle", "text"->"Button", "badge"->"1", "iconType"->"info"))
 						@components.linkbutton(Map("id"->"", "type"->"primary", "outline"->"true", "icon"->"fas fa-exclamation-triangle", "text"->"Button", "badge"->"2", "iconType"->"warning"))
