--- a/app/views/libraries/standard/head.scala.html
+++ b/app/views/libraries/standard/head.scala.html
@@ -15,6 +15,7 @@
 <link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/common-plus.css")'>
 <link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/experimental"+dirSuffix()+".css")'>
 <link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/experimental-plus.css")'>
+<link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/font.css")'>
 <link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/size.css")'>
 <link rel='stylesheet' href='@routes.Assets.versioned("stylesheets/color.css")'>
 
