--- a/app/views/user/index.scala.html
+++ b/app/views/user/index.scala.html
@@ -150,6 +150,8 @@
 							Map("name"->"SchemaSpy", "icon"->"fas fa-database", "link"->"http://schemaspy.org", "info"->""),
 
 							Map("name"->"OpenJDK", "icon"->"fas fa-coffee", "link"->"http://jdk.java.net/10/", "info"->""),
+							Map("name"->"Java API for JSON Processing for JSON Processing", "icon"->"fas fa-pencil-alt", "link"->"https://javaee.github.io/jsonp", "info"->""),
+							Map("name"->"JSON Processing", "icon"->"fas fa-pencil-alt", "link"->"https://projects.eclipse.org/projects/ee4j.jsonp", "info"->""),
 							Map("name"->"mockito", "icon"->"fas fa-pencil-alt", "link"->"https://github.com/mockito/mockito", "info"->""),
 							Map("name"->"Commons Text", "icon"->"fas fa-text-width", "link"->"http://commons.apache.org/proper/commons-text/", "info"->""),
 							Map("name"->"MapStruct", "icon"->"fas fa-cubes", "link"->"http://mapstruct.org", "info"->""),
